Fix mobile double border between links cell and tz row

--- a/templates/style.css
+++ b/templates/style.css
@@ -1021,10 +1021,8 @@ button.mini-btn {
     #links-cell {
         display: block;
         width: auto;
-    }
-
-    #links-cell {
         position: relative;
+        border-bottom: none;
     }
 
     #links-cell > .links-toggle-btn {
